--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -4,8 +4,7 @@
   color: $primary-color-1;
 }
 
-.filter-panel,
-.options {
+.dashboard .content {
   label {
     margin-bottom: 0;
 		margin-top: 0.75rem;
